# gravity-analyst-suite

./: .gitignore  .gitmodules  CONTEXT.md  QUICK_START.md  README.md  STRUCTURE.md  setup.sh  update.sh
gravitic-celestial/: .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  conftest.py  pyproject.toml  run_poller.py
gravitic-celestial/core/: logging_config.py  models.py  monitor.py
gravitic-celestial/core/analysis/: contagion.py  sandbagging.py
gravitic-celestial/core/export/: aligner.py  auto_modeler.py  builder.py
gravitic-celestial/core/extraction/: engine.py  multimodal_engine.py  robust_engine.py  slidedeck_parser.py
gravitic-celestial/core/fusion/: macro_bridge.py  nebula_bridge.py
gravitic-celestial/core/ingestion/: edgar_client.py  polling_engine.py  provider.py  sec_polling.py  state_manager.py
gravitic-celestial/core/notifications/: client.py
gravitic-celestial/docker/: Dockerfile  docker-compose.yml
gravitic-celestial/scripts/: debug_imports.py  debug_macro_bridge.py  demo_rag.py  demo_report.py  explore_nsepython.py  index_competitors.py  inspect_edgar_filing.py  stress_test_modeler.py  test_international.py  test_macro_bridge.py  test_midcap.py  test_smallcap.py  test_vision.py  verify_mvp_plus.py
gravitic-celestial/tests/: test_nse_logic.py
gravitic-celestial/ui/: app.py
gravitic-macro/: .gitignore  README.md  pyproject.toml
gravitic-macro/macro_core/: __init__.py  models.py  models_index.py
gravitic-macro/scripts/: test_discovery.py  test_improvements.py  test_ingestion.py  test_polymarket.py
gravitic-nebula/: .gitignore  DESIGN.md  ENGINEERING_LOG.md  README.md  WALKTHROUGH.md  pyproject.toml
gravitic-nebula/core/: __init__.py  config.py  nebula_bridge.py
gravitic-nebula/scripts/: benchmark_hiring.py  debug_social_refactor.py  evaluate_resolution.py  live_smoke_test.py  run_alpha_sync.py
gravitic-nebula/tests/: test_digital.py  test_entity_resolver.py  test_hiring.py  test_shipping.py  test_social.py
(+25 files in other folders)
